add the header section

--- a/index.html
+++ b/index.html
@@ -7,13 +7,59 @@
 <!-- dasiy UI CMD -->
 <link href="https://cdn.jsdelivr.net/npm/daisyui@4.12.23/dist/full.min.css" rel="stylesheet" type="text/css" />
 <script src="https://cdn.tailwindcss.com"></script>
+<link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+
 
 </head>
 <body>
      <!-- header section -->
-     <header>
-
-     </header>
+     <header class="bg-[#264653]" >
+           <!-- navbar -->
+     <div class="navbar">
+        <div class="navbar-start">
+          <div class="dropdown">
+            <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                class="h-5 w-5"
+                fill="none"
+                viewBox="0 0 24 24"
+                stroke="currentColor  ">
+                <path
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  stroke-width="4"
+                  d="M4 6h16M4 12h8m-8 6h16" 
+                  bg-white/>
+              </svg>
+            </div>
+            <ul
+              tabindex="0"
+              class="menu menu-xl dropdown-content  rounded-box z-[1] mt-3 w-52 p-2 shadow">
+              <li><a>Home</a></li>
+              <li><a>Shop</a></li>
+              <li><a>News</a></li>
+              <li><a>Contact</a></li>
+            </ul>
+          </div>
+        </div>
+        <div class="navbar  mt-5">
+            <div class="navbar-end">
+              
+            </div>
+            <div class="navbar-center hidden lg:flex">
+              <ul class="menu menu-horizontal px-20">
+                <li><a class="text-white text-[16px]">Home</a></li>
+                  <li><a class="text-white text-[16px]">Shop</a></li>
+                  <li><a class="text-white text-[16px]">News</a></li>
+                  <li><a class="text-white text-[16px]">Contact</a></li>
+              </ul>
+            </div>
+        <div class="navbar-end">
+          <a class="btn">Button</a>
+        </div>
+      </div>
+    </header>
      <!-- main seciton -->
      <main>
 
